--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ body {
     color: #e44d26;
 }
 .header, .footer {
-    background: #000;
+    background: rgb(40, 40, 40);
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 10px 30px 10px 30px;
     box-sizing: border-box;
-}
+    }
 
 .logo {
     width: 60px;
@@ -134,7 +134,9 @@ height: 50px;
     align-items: center;
     height: 80%;
 }
-
+.hamburguesa {
+    display: none;
+}
 
 @media only screen and (max-width: 480px) {
     .imagen-principal {
@@ -146,4 +148,60 @@ height: 50px;
     .texto-somos {
         padding: 10px;
     }
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        height: 80px;
+    }
+    .redes img, .contacto img {
+        height: 15px;
+        width: 15px;
+    }
+    .contacto {
+        font-size: 0.7em;
+    }
+    .avatar2 img, .avatar img {
+        height: 80px;
+        width: 80px;
+        padding-right: 10px;
+    }
+    .persona2 {
+        width: 100%;
+    }
+    .redes {
+        margin-right: 0px;
+    }
+    .hamburguesa {
+        display: block;
+        padding-top: 15px;
+    }
+    .titulo {
+        font-size: .8em;
+        padding-top: 0px;
+        text-align: left;
+    }
+    .logo-somos, .logos-sociales {
+        display: none;
+    }
+    .que-somos {
+        height: 130px;
+        padding-left: 15px;
+    }
+    .imagen-principal {
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+    .texto-somos {
+        width: 100%;
+        padding: 0px;
+    }
+    .nosotras {
+        display: block;
+    }
+    .persona {
+        width: 100%;
+        margin-top: 10px;
+    }
+
 }
